docs: every README in wickra's shape; the Java loader reads the library the jar ships (#60)
A cross-repo scan compared each README's heading skeleton with wickra's. The root README opens as wickra's does and its shared sections run in wickra's order with wickra's License wording; every binding README is Install / Quick start / Benchmark / Documentation / Security / Disclaimer / License with the product's surface notes as subsections; examples/README.md lists every language with the commands CI runs; the per-language example READMEs, fuzz/README.md and docs/README.md's editing section exist as in wickra.

The Java loader is the one code change: the jar carries native/<os>-<arch>/ but Native.java never read it, so the README's claim that the library ships inside the jar was false for anyone installing from Maven Central. It now resolves -Dnative.lib.dir, then the bundled copy, then cargo's target directories, then the bare name -- wickra's order.